[project]
name = "climate-conductor"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest-homeassistant-custom-component", "ruff", "mypy"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
